Finished fixing cropper

--- a/static_dev/scss/header.scss
+++ b/static_dev/scss/header.scss
@@ -5,15 +5,26 @@ body{
     flex-direction: column;
 }
 
-// body, html {
-//     margin: 0px;
-//     // height: 100%;
-// }
-
 // Layout
 .navbar.navbar-expand-lg.navbar-dark{
     a.navbar-brand{width: 4%}
     .collapse.navbar-collapse{
+        form.form-floating.me-auto.w-50 {
+            input {
+                backdrop-filter: brightness(0.7);
+                background-color: transparent !important;
+                color: white;
+                    
+                &:focus {
+                    border: 1px solid #aaa !important;
+                }
+            }
+            label {
+                color: #aaa;
+                font-size: 1rem;
+                margin-bottom: 1rem;
+            }
+        }
         .dropstart{
             button.dropdown-toggle{
                 img{border:solid 1px goldenrod ;}
@@ -234,6 +245,15 @@ section {
             background: transparent;
             color: white;
             border: 0;
+
+            @media (max-width: 719px) {
+                width: 100% !important;
+                margin-left: 0 !important;
+                
+                .btn.btn-outline-secondary.btn-sm.w-25{
+                    width: 75% !important;
+                }
+            }
             
             .card-body{
                 border: 0;
@@ -259,44 +279,42 @@ section {
     }
 }
 
-.my-modal {
-    margin: 0px;
-    position: fixed;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    z-index: 1055;
-    height: 100%;
-    backdrop-filter: brightness(0.4);
+
+#changeProfilePic {
     display: none;
+    height: 100vh; 
+    width: 100vw; 
+    position: fixed; 
+    left: 0;
+    top: 0;
+    z-index: 1;
+    backdrop-filter: brightness(0.4);
+    // margin: 0px;
 
     .my-modal-content {
-        width: 30%;
-        background-color: $bg-main;
+        background-color: #0d1425;
         border: 1px solid white;
         border-radius: 10px;
         position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        left: 50%; 
+        top: 50%;
+        transform: translate(-50%, -50%); 
+        max-width: 40%;
+        max-height: 70%;
+
+        @media (max-width: 719px) {
+            max-width: 99% !important;
+            width: 99% !important;
+        }
+        #outer-box {
+            width: 100%;
+            overflow-y: auto;
+            #box1 {
+                img {max-width: 100%;}
+            }
+        }
     }
 }
-
-.my-cropper-container {
-        margin: 20px auto;
-        max-width: 500px !important;
-        max-height: 500px !important;
-        & > * {
-            max-width: 500px !important;
-            max-height: 500px !important;
-        }
-        
-
-        img {
-            width: 500px !important;
-        }
-    }
 
 
 ///////////////////////////////////
